--- a/index.html
+++ b/index.html
@@ -13,25 +13,23 @@
       <nav class="transparent">
         <div class="nav-wrapper"><a href="#!" class="brand-logo">Luan Souza</a>
           <ul class="right hide-on-med-and-down">
-            <li><a href="sass.html">Sass</a></li>
-            <li><a href="badges.html">Components</a></li>
-            <li class="active"><a href="collapsible.html">JavaScript</a></li>
+            <li><a href="sass.html">Social</a></li>
           </ul>
         </div>
       </nav>
       <main class="row">
-        <div class="fundo col-md-13"><img src="img/fundo.jpg"></div>
+        <div class="fundo col-md-13"><img src="img/fundo2.jpg"></div>
         <div class="header center col-md-12 transparent"><a class="btn-floating col md 12 photo animated bounceInLeft"><i class="material-icons"></i></a></div>
       </main>
     </div>
     <section class="center col-md-13 skills row">
-      <h1 class="title col-md-13 center">Trabalhos</h1>
+      <h1 id="trab" class="title col-md-13 center">Trabalhos</h1>
       <div class="jobs-box col-md-6 col-xs-12 center col-lg-3 border wow flipInX"><img src="img/lbook.png" class="photo-card"></div>
       <div class="jobs-box col-md-6 col-xs-12 col-lg-3 center wow flipInX"><img src="img/table.png" class="photo-card"></div>
       <div class="jobs-box col-md-6 col-xs-12 col-lg-3 center border wow flipInX"><img src="img/lphotos.png" class="photo-card"></div>
       <div class="jobs-box col-md-6 col-xs-12 col-lg-3 center wow flipInX"><img src="img/loading.png" class="photo-card"></div>
     </section>
-    <section class="col-md-13 jobs row"></section>
+    <section class="col-md-13 jobs row"><img src="img/fundo.jpg"></section>
     <section class="col-md-13 social row">
       <h1 class="title col-md-13 center">Social</h1><span class="social-box col-md-6 col-xs-12 center border"><i class="fa fa-facebook-square icons wow flipInX"></i></span><span class="social-box col-md-6 col-xs-12 center"><i class="fa fa-instagram icons wow flipInX"></i></span><span class="social-box col-md-6 col-xs-12 center border"><i class="fa fa-google-plus-square icons wow flipInX"></i></span><span class="social-box col-md-6 col-xs-12 center"><i class="fa fa-whatsapp icons wow flipInX"></i></span>
     </section>
@@ -42,7 +40,7 @@
       {
       	boxClass:     'wow',      // default
       	animateClass: 'animated', // default
-      	offset:       200,          // default
+      	offset:       100,          // default
       	mobile:       true,       // default
       	live:         true        // default
       }
