--- a/index.html
+++ b/index.html
@@ -12,18 +12,17 @@
     <div class="content">
       <nav class="transparent center">
         <div class="nav-wrapper"><a href="#!" class="brand-logo fontNav">LS</a>
-          <ul class="right hide-on-med-and-down">
-            <li><a href="sass.html" class="fontNav">Social</a></li>
-          </ul>
+          <ul class="right hide-on-med-and-down"></ul>
         </div>
       </nav>
       <main class="row">
         <div class="fundo col-md-13"><img src="img/fundo2.jpg"></div>
         <div class="header center col-md-12 transparent">
-          <div class="descr"> 
-            <p data-wow-delay="0.3s" class="wow bounceInLeft">Meu nome é Luan Souza, tenho 20 anos, </p>
-            <p data-wow-delay="0.8s" class="wow bounceInLeft"> sou estudante de Sistemas para Internet, </p>
-            <p data-wow-delay="1.3s" class="wow bounceInLeft"> entusiasta de programação e desenvolvimento web.</p>
+          <div class="descr">
+            <p data-wow-delay="0.3s" class="wow bounceInLeft">Meu nome é Luan Souza, tenho 20 anos</p>
+            <p data-wow-delay="0.8s" class="wow bounceInLeft"> sou estudante de Sistemas para Internet</p>
+            <p data-wow-delay="1.3s" class="hidden-xs wow bounceInLeft"> entusiasta de programação e desenvolvimento web.</p>
+            <p data-wow-delay="1.3s" class="wow bounceInLeft"></p>
           </div><a class="btn-floating col md 12 photo animated bounceInLeft"><i class="material-icons"></i></a>
         </div>
       </main>
@@ -35,22 +34,8 @@
       <div class="jobs-box col-md-6 col-xs-12 col-lg-3 center border wow flipInX"><img src="img/lphotos.png" class="photo-card"></div>
       <div class="jobs-box col-md-6 col-xs-12 col-lg-3 center wow flipInX"><img src="img/loading.png" class="photo-card"></div>
     </section>
-    <section class="col-md-13 jobs row">
-      <div id="carousel-example-generic" data-ride="carousel" class="carousel slide">
-        <ol class="carousel-indicators">
-          <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-          <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-          <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-        </ol>
-        <div role="listbox" class="carousel-inner">
-          <div class="item active"><img src="img/fundo2.jpg" alt="...">
-            <div class="carousel-caption"></div>
-          </div>
-          <div class="item"><img src="img/user.jpg" alt="...">
-            <div class="carousel-caption">...</div>
-          </div>
-        </div><a href="#carousel-example-generic" role="button" data-slide="prev" class="left carousel-control"><span aria-hidden="true" class="glyphicon glyphicon-chevron-left"></span><span class="sr-only">Previous</span></a><a href="#carousel-example-generic" role="button" data-slide="next" class="right carousel-control"><span aria-hidden="true" class="glyphicon glyphicon-chevron-right"></span><span class="sr-only">Next</span></a>
-      </div>
+    <section class="col-md-13 jobs row center">
+      <div class="quadros"></div>
     </section>
     <section class="col-md-13 social row">
       <h1 class="title col-md-13 center">Social</h1><span class="social-box col-md-6 col-xs-12 center border"><i class="fa fa-facebook-square icons wow flipInX"></i></span><span class="social-box col-md-6 col-xs-12 center"><i class="fa fa-instagram icons wow flipInX"></i></span><span class="social-box col-md-6 col-xs-12 center border"><i class="fa fa-google-plus-square icons wow flipInX"></i></span><span class="social-box col-md-6 col-xs-12 center"><i class="fa fa-whatsapp icons wow flipInX"></i></span>
