--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
       </nav>
       <main class="row">
-        <div class="fundo col-md-13"><img src="img/fundo2.jpg"></div>
+        <div class="fundo col-md-12"><img src="img/fundo2.jpg"></div>
         <div class="header center col-md-12 transparent">
           <div class="descr">
             <p data-wow-delay="0.3s" class="wow bounceInLeft">Meu nome é Luan Souza, tenho 20 anos</p>
@@ -27,18 +27,19 @@
         </div>
       </main>
     </div>
-    <section class="center col-md-13 skills row">
-      <h1 id="trab" class="title col-md-13 center">Trabalhos</h1>
+    <section class="center col-md-12 skills row">
+      <h1 id="trab" class="title col-md-12 center">Trabalhos</h1>
       <div class="jobs-box col-md-6 col-xs-12 center col-lg-3 border wow flipInX"><img src="img/lbook.png" class="photo-card"></div>
       <div class="jobs-box col-md-6 col-xs-12 col-lg-3 center wow flipInX"><img src="img/table.png" class="photo-card"></div>
       <div class="jobs-box col-md-6 col-xs-12 col-lg-3 center border wow flipInX"><img src="img/lphotos.png" class="photo-card"></div>
       <div class="jobs-box col-md-6 col-xs-12 col-lg-3 center wow flipInX"><img src="img/loading.png" class="photo-card"></div>
     </section>
-    <section class="col-md-13 jobs row center">
+    <section class="col-md-12 jobs row center">
+      <div class="des col-md-12">Desenvolvimento em:</div>
       <div class="quadros"></div>
     </section>
-    <section class="col-md-13 social row">
-      <h1 class="title col-md-13 center">Social</h1><span class="social-box col-md-6 col-xs-12 center border"><i class="fa fa-facebook-square icons wow flipInX"></i></span><span class="social-box col-md-6 col-xs-12 center"><i class="fa fa-instagram icons wow flipInX"></i></span><span class="social-box col-md-6 col-xs-12 center border"><i class="fa fa-google-plus-square icons wow flipInX"></i></span><span class="social-box col-md-6 col-xs-12 center"><i class="fa fa-whatsapp icons wow flipInX"></i></span>
+    <section class="col-md-12 social row">
+      <h1 class="title col-md-12 center">Social</h1><span class="social-box col-md-6 col-xs-12 center border"><i class="fa fa-facebook-square icons wow flipInX"></i></span><span class="social-box col-md-6 col-xs-12 center"><i class="fa fa-instagram icons wow flipInX"></i></span><span class="social-box col-md-6 col-xs-12 center border"><i class="fa fa-google-plus-square icons wow flipInX"></i></span><span class="social-box col-md-6 col-xs-12 center"><i class="fa fa-whatsapp icons wow flipInX"></i></span>
     </section>
     <script type="text/javascript" src="static/js/script.js"></script>
     <script type="text/javascript" src="static/js/wow.min.js"></script>
