--- a/index.html
+++ b/index.html
@@ -174,6 +174,8 @@
         <div class="traco-content col-md-12">
           <div class="traco border-black"></div>
         </div>
+        <div class="social text-center col-md-12"><i aria-hidden="true" class="fa fa-facebook-official"></i><i aria-hidden="true" class="fa fa-github"></i></div>
+        <div class="email text-center col-md-12">luanjs.if@gmail.com</div>
       </div>
     </div>
     <script type="text/javascript" src="static/framesjs/wow.min.js"></script>
