--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="content">
       <div class="header col-md-12">
         <div class="info-pessoal col-md-6 col-md-offset-3">
-          <div class="foto col-md-2 col-md-offset-5"></div>
+          <div class="foto"></div>
         </div>
         <div class="sobre-mim col-md-10 col-md-offset-1">Olá! meu nome é<span class="nome"><strong> Luan Souza</strong></span>.
           <div class="descricao">
@@ -32,8 +32,8 @@
           <h4 class="col-md-12">titulo</h4>
           <p class="wow fadeInLeft">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vitae mi id urna luctus lacinia. Maecenas egestas in magna vel tristique. Donec non interdum diam. Nunc ac arcu orci. Morbi sed leo at justo faucibus consequat. Nullam lectus massa, facilisis eu eros non, cursus placerat nisl. Morbi euismod mi eu eros consequat, id sodales massa rhoncus. Donec vel consectetur mi, id dictum dolor. Maecenas maximus et erat nec dictum. Phasellus vulputate libero sed mauris lacinia pulvinar. In tristique lacus mauris, tincidunt elementum purus ullamcorper id. Curabitur nec quam lectus. Vestibulum sed turpis sed libero fermentum facilisis. Mauris eu purus sit amet risus hendrerit venenatis. Vestibulum in nisl felis. Praesent ultrices tincidunt elit in elementum.</p>
         </div>
-        <div class="about-esq col-about col-md-5"><img class="book col-md-6 col-md-offset-3 wow fadeInRight"></div>
-        <div class="about-esq col-about col-md-5 col-md-offset-1"><img class="book col-md-6 col-md-offset-3 wow fadeInRight"></div>
+        <div class="about-esq col-about col-md-5 hidden-xs"><img class="book wow fadeInRight"></div>
+        <div class="about-esq col-about col-md-5 col-md-offset-1"><img class="book wow fadeInRight"></div>
         <div class="about-dir col-about col-md-5">
           <h4 class="col-md-12">titulo</h4>
           <p class="wow fadeInLeft">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vitae mi id urna luctus lacinia. Maecenas egestas in magna vel tristique. Donec non interdum diam. Nunc ac arcu orci. Morbi sed leo at justo faucibus consequat. Nullam lectus massa, facilisis eu eros non, cursus placerat nisl. Morbi euismod mi eu eros consequat, id sodales massa rhoncus. Donec vel consectetur mi, id dictum dolor. Maecenas maximus et erat nec dictum. Phasellus vulputate libero sed mauris lacinia pulvinar. In tristique lacus mauris, tincidunt elementum purus ullamcorper id. Curabitur nec quam lectus. Vestibulum sed turpis sed libero fermentum facilisis. Mauris eu purus sit amet risus hendrerit venenatis. Vestibulum in nisl felis. Praesent ultrices tincidunt elit in elementum.</p>
@@ -150,6 +150,9 @@
             <input id="radio-jade" type="radio" name="tecnologia" class="radios">
             <input id="radio-js" type="radio" name="tecnologia" class="radios">
             <input id="radio-html" type="radio" name="tecnologia" class="radios">
+            <div class="traco-preto-content col-md-12">
+              <div class="traco-preto border-black"></div>
+            </div>
           </div>
         </div>
         <div class="desenvolvimento2 col-md-6 border-black">
