--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <div class="sobre-mim col-md-10 col-md-offset-1">Olá! meu nome é<span class="nome"><strong> Luan Souza</strong></span>.
           <div class="descricao">
-            <p>Sou entusiasta de programação e desenvolvimento web.</p><span>Estudante de<strong>Sistemas para Internet</strong></span>no Instituto Federal de Educação, Ciência e Tecnologia do Sudeste de Minas Gerais.
+            <p><strong>Instituto Federal de Educação, Ciência e Tecnologia do Sudeste de Minas Gerais</strong></p>
           </div><span aria-hidden="true" class="glyphicon glyphicon-menu-down"></span>
         </div>
       </div>
